--- a/src/html/confirmation.html
+++ b/src/html/confirmation.html
@@ -25,7 +25,7 @@
 <body>
 	<div class = "container">
 		<h2 style="position:relative; top:30px;left:10px;"></h2>
-		<div style="position: fixed;top:80%;left:60%">
+		<div style="position: relative; top:70px; text-align: right; margin-right: 30px">
 			<button id = "cancel" type="button" class="btn btn-primary"></button>
 			&nbsp;&nbsp;
 			<button id = "delete"type="button" class="btn btn-danger"></button>
