--- a/src/html/reminder.html
+++ b/src/html/reminder.html
@@ -39,18 +39,21 @@
 			white-space: normal;
 			outline: none;
 			color: var(--text-color);
-			margin-left: 5%;
-			margin-right: 5%;
-			display: inline-grid;
+			
+			left:70px;
+			
+			bottom: 3.8%;
+			width: 85%;
+			position: relative;
 		}
 		
 		i
 		{
-			margin-left: 5%;
+			margin-left: 25px;
 		}
 		span
 		{
-			margin-left: 5%;
+			margin-left: 25px;
 		}
 
 		#reminderTitle:empty::before
@@ -125,8 +128,8 @@
     	hr
     	{
     		background-color: var(--hr-line);
-    		left:5%;
-    		width: 90%;
+    		left:25px;
+    		width: 97%;
     	}
 
 
@@ -477,13 +480,13 @@
 		<div class="week">
 
 			<div id = "days" style="position: relative;top: 15px; cursor: pointer;">
-				<div>Sunday<input type="checkbox" style="position:absolute; right: 20px" id = "week_0"><hr style="margin-left: 0"></div>
-				<div>Monday<input type="checkbox" style="position:absolute; right: 20px" id = "week_1"><hr style="margin-left: 0"></div>
-				<div>Tuesday<input type="checkbox" style="position:absolute; right: 20px" id = "week_2"><hr style="margin-left: 0"></div>	
-				<div>Wednesday<input type="checkbox" style="position:absolute; right: 20px" id = "week_3"><hr style="margin-left: 0"></div>
-				<div>Thursday<input type="checkbox" style="position:absolute; right: 20px" id = "week_4"><hr style="margin-left: 0"></div>
-				<div>Friday<input type="checkbox" style="position:absolute; right: 20px" id = "week_5"><hr style="margin-left: 0"></div>
-				<div>Saturday<input type="checkbox" style="position:absolute; right: 20px" id = "week_6"><hr style="margin-left: 0"></div>
+				<div>Sunday<input type="checkbox" style="position:absolute; right: 20px" id = "week_0"><hr style="margin-left: 0; width: 93%"></div>
+				<div>Monday<input type="checkbox" style="position:absolute; right: 20px" id = "week_1"><hr style="margin-left: 0; width: 93%"></div>
+				<div>Tuesday<input type="checkbox" style="position:absolute; right: 20px" id = "week_2"><hr style="margin-left: 0; width: 93%"></div>	
+				<div>Wednesday<input type="checkbox" style="position:absolute; right: 20px" id = "week_3"><hr style="margin-left: 0; width: 93%"></div>
+				<div>Thursday<input type="checkbox" style="position:absolute; right: 20px" id = "week_4"><hr style="margin-left: 0; width: 93%"></div>
+				<div>Friday<input type="checkbox" style="position:absolute; right: 20px" id = "week_5"><hr style="margin-left: 0; width: 93%"></div>
+				<div>Saturday<input type="checkbox" style="position:absolute; right: 20px" id = "week_6"><hr style="margin-left: 0; width: 93%"></div>
 			</div>
 			
 			<div id = "effectiveEntry" style="position:relative; top: 15px; cursor: pointer; width: 97%">
