--- a/src/html/reminder.html
+++ b/src/html/reminder.html
@@ -639,6 +639,7 @@
         	{
         		if(alarmText[i] != "") alarmDict[alarmText[i]] = 1;
         	}
+        	console.log(alarmDict);
         	showAlarm();
         	
 
