transfer and style of music

--- a/src/html/diary.html
+++ b/src/html/diary.html
@@ -148,7 +148,7 @@
         	position: relative;
         }
 	</style>
-	<title>DocYOUment</title>
+	<title>LifeJournal</title>
 </head>
 <body>
 	<audio id = "alarm">
@@ -164,7 +164,7 @@
 		<!-- close: #16 -->
 		<div id = "myPanel" class = "panel">
 			<span style="transform: translate(-50%, -50%);position: absolute;left: 50%;top: 5%; font-size: 45px;"><i class	="fas fa-book"></i></span>
-			<p style = "color:#E80D38; text-align: center; font-size:30px">DocYOUment</p>
+			<p style = "color:#E80D38; text-align: center; font-size:30px">LifeJournal</p>
 			<hr>
 			<a href = "#" id ="closePanel" class = "closePanel" ><i class="fas fa-times-circle"></i></a>
 			<a href = "#" id = "setting"><i class="fas fa-cog"></i>&nbsp;&nbsp;Setting</a>
