--- a/src/html/login.html
+++ b/src/html/login.html
@@ -14,11 +14,25 @@
 	<link href="../../fontawesome/css/all.css" rel="stylesheet">
 	<script src="../../node_modules/jquery/dist/jquery.min.js"></script>
 	<script src="../js/file.js"></script>
+
 	<title>Login</title>
+	<style type="text/css">
+		body
+		{
+
+			background-image: url('../../image/sea.jpg');
+			background-size: cover;
+    		
+		}
+	</style>
 </head>
 <body>
 	<div class = "container">
+		<!--
 		<img src = "../../image/login.png" alt = "log in image" height="100" width="510">
+	-->
+
+		<h1 style="text-align: center; margin-top: 20px">LifeJournal</h1>
 
 		<form>
 
@@ -39,7 +53,7 @@
 			<div id = "error1" style="text-align:right;color:red">  </div>
 			<br>
 		</form>
-		<a href="registration.html">register</a>
+		<a href="registration.html" style="color:darkblue">register</a>
 		<div style="text-align:right">Remember me <input type="checkbox" id = "remember"></div>
 	</div>
 
