--- a/src/html/registration.html
+++ b/src/html/registration.html
@@ -14,6 +14,15 @@
 	<link href="../../fontawesome/css/all.css" rel="stylesheet">
 	<script src="../../node_modules/jquery/dist/jquery.min.js"></script>
 	<script src="../js/file.js"></script>
+	<style type="text/css">
+		body
+		{
+
+			background-image: url('../../image/sea.jpg');
+			background-size: cover;
+    		
+		}
+	</style>
 	<title>
 		Registration
 	</title>
