--- a/src/html/return_to_login.html
+++ b/src/html/return_to_login.html
@@ -12,6 +12,15 @@
 	<link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css">
 	<link href="../../fontawesome/css/all.css" rel="stylesheet">
 	<script src="../../node_modules/jquery/dist/jquery.min.js"></script>
+	<style type="text/css">
+		body
+		{
+
+			background-image: url('../../image/sea.jpg');
+			background-size: cover;
+    		
+		}
+	</style>
 	<title></title>
 </head>
 <body>
