--- a/src/html/calendar.html
+++ b/src/html/calendar.html
@@ -227,7 +227,7 @@
 <body>
     
     <span class="dot" style="position: fixed; left: 17%; top: 3%; background-color: blue; z-index: 2"><span style="position: relative; left: 30px; font-size: 25px;bottom:13px; z-index: 2">Reminders</span></span>
-    <span class="dot" style="position: fixed; right: 30%;top: 3%; background-color: red;z-index: 2"><span style="position: relative; left: 20px; font-size: 25px;bottom:13px;z-index: 2">Diaries</span></span>
+    <span class="dot" style="position: fixed; right: 30%;top: 3%; background-color: red;z-index: 2"><span style="position: relative; left: 20px; font-size: 25px;bottom:13px;z-index: 2">Notes</span></span>
 
     <a href = "#" id = "reminder" style="top: 80%; position: fixed; right: 10%;font-size: 40px;z-index: 2"><i class="fas fa-plus-circle"></i></a>
 
