--- a/src/html/registration.html
+++ b/src/html/registration.html
@@ -193,7 +193,7 @@
                 	content += "     About LifeJournal";
 
                 	content += "TITLE_ENTRY_DATE_PHOTO:"
-                	content += "1. Album module: organize your photos.\n2. Music module: play your local music.\n3. Setting module: change your password and theme modes.\n4. Text entry module: write down your journal.\n5. Encryption: I protect your information.\n\ncoming Soon:\n1. Data backup module.\n2. Some of the features are not implemented in the calendar (view the calendar in a week and search your events.)\n\nContact: Please contact this email at a191618755@gmail.com if you have any questions or experience any bugs about the app.";
+                	content += "1. Album module: organize your photos.\n2. Music module: play your local music.\n3. Setting module: change your password and theme modes.\n4. Text entry module: write down your note.\n\n\nComing soon:\n1. Data backup module.\n2. Some of the features are not implemented in the calendar (view the calendar in a week and search your events.)\n\nContact: Please contact this email at a191618755@gmail.com if you have any questions or experience any bugs about the app.";
 
                 	content += "TITLE_ENTRY_DATE_PHOTO:"
                 	content += "2019-12-14";
